<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ===================================================== -->
    <!-- PROJECT INFORMATION                                   -->
    <!-- ===================================================== -->

    <groupId>com.buynex</groupId>
    <artifactId>admin</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- ===================================================== -->
    <!-- JAVA / JAVAFX VERSION                                 -->
    <!-- ===================================================== -->

    <properties>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <javafx.version>21.0.12</javafx.version>

    </properties>


    <!-- ===================================================== -->
    <!-- DEPENDENCIES                                          -->
    <!-- ===================================================== -->

    <dependencies>


        <!-- ================================================= -->
        <!-- JAVAFX CONTROLS                                   -->
        <!-- ================================================= -->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <!-- ================================================= -->
        <!-- JAVAFX FXML                                      -->
        <!-- ================================================= -->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <!-- ================================================= -->
        <!-- JAVAFX MEDIA                                     -->
        <!-- ================================================= -->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <!-- ================================================= -->
        <!-- JAVAFX WEB                                       -->
        <!-- ================================================= -->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <!-- ================================================= -->
        <!-- JAVAFX SWING                                     -->
        <!-- Required for SwingFXUtils / BufferedImage        -->
        <!-- ================================================= -->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <!-- ================================================= -->
        <!-- FIREBASE ADMIN                                   -->
        <!-- ================================================= -->

        <dependency>
            <groupId>com.google.firebase</groupId>
            <artifactId>firebase-admin</artifactId>
            <version>9.1.1</version>
        </dependency>


        <!-- ================================================= -->
        <!-- JSON                                              -->
        <!-- ================================================= -->

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250517</version>
        </dependency>


        <!-- ================================================= -->
        <!-- CLOUDINARY                                        -->
        <!-- ================================================= -->

        <dependency>
            <groupId>com.cloudinary</groupId>
            <artifactId>cloudinary-http5</artifactId>
            <version>2.3.2</version>
        </dependency>


        <!-- ================================================= -->
        <!-- RAZORPAY                                          -->
        <!-- ================================================= -->

        <dependency>
            <groupId>com.razorpay</groupId>
            <artifactId>razorpay-java</artifactId>
            <version>1.4.8</version>
        </dependency>


        <!-- ================================================= -->
        <!-- ZXING CORE                                        -->
        <!-- QR CODE / BARCODE DECODING                        -->
        <!-- ================================================= -->

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.5.3</version>
        </dependency>


        <!-- ================================================= -->
        <!-- ZXING JAVASE                                      -->
        <!-- BufferedImage QR/Barcode processing               -->
        <!-- ================================================= -->

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>javase</artifactId>
            <version>3.5.3</version>
        </dependency>


        <!-- ================================================= -->
        <!-- WEBCAM CAPTURE                                    -->
        <!-- Desktop camera access                             -->
        <!-- ================================================= -->

        <dependency>
            <groupId>com.github.sarxos</groupId>
            <artifactId>webcam-capture</artifactId>
            <version>0.3.12</version>
        </dependency>


    </dependencies>


    <!-- ===================================================== -->
    <!-- BUILD CONFIGURATION                                  -->
    <!-- ===================================================== -->

    <build>

        <plugins>


            <!-- ============================================= -->
            <!-- MAVEN COMPILER                                -->
            <!-- ============================================= -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>

                <configuration>

                    <source>17</source>
                    <target>17</target>

                    <encoding>UTF-8</encoding>

                </configuration>

            </plugin>


            <!-- ============================================= -->
            <!-- JAVAFX MAVEN PLUGIN                           -->
            <!-- ============================================= -->

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>

                <configuration>

                    <mainClass>
                        com.kryox.Main
                    </mainClass>

                </configuration>

            </plugin>


        </plugins>

    </build>

</project>